--- a/menu.html
+++ b/menu.html
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-11">
                   <div>
-                    <a href="#" class="menu-title" data-id="{{id}}">{{#if name.value}}{{{name.value}}}{{else}}{{{name}}} (ID #{{id}}){{/if}}</a>
+                    <a href="#" class="menu-title" data-id="{{id}}">{{#if name.value}}{{{name.value}}} (ID #{{{id}}}){{else}}{{{name}}} (ID #{{{id}}}){{/if}}</a>
                   </div>
                   {{#if name.value}}<div class="font-italic">{{{name.translation}}}</div>{{/if}}
                   {{#if name.value}}<div class="font-italic">{{{name.pinyin}}}</div>{{/if}}
