--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@
       .food-imgs img {
         max-width: 100px;
       }
-      
+    
       .selected {
         filter: opacity(50%);
       }
@@ -48,7 +48,7 @@
         opacity: 0;
         position: absolute;
         top: 0;
-        transition: opacity 500ms ease-in-out;
+        transition: opacity 250ms ease-in-out;
         width: 100%;
       }
     </style>
@@ -104,6 +104,7 @@
                 {{#if (isNotLastIterator . iters depth)}}
                 </a>
                 {{/if}}
+                <a href="#" class="select"> [+]</a>
                 {{#if price}}<div>{{@root.shop_info.currency_symbol}}{{toFixed2 price}}</div>{{/if}}
               </div>
               <div>
@@ -115,7 +116,7 @@
                 {{#if image}}<img src="{{prefix image}}" class="ml-3 img-thumbnail align-top" />{{/if}}
                 {{#if name.google_image}}
                 <div class="ml-3 img-container">
-                  <img src="{{prefix name.google_image}}" class="img-thumbnail align-top" />
+                  <img src="{{prefix name.google_image}}" class="img align-top" />                  
                   <div class="google-overlay"></div>
                 </div>
                 {{/if}}
@@ -234,22 +235,16 @@
               if (data.data)
               {
                 $("#menu").html(menu_template(data.data));
-                $(".card").click(function(e) {
-                    if ($(e.target).is("a"))
-                      return;
-
+                $(".select").click(function(e) {
                     var target = $(e.target).closest(".card").get(0);
-                    if (this == target)
+                    var hdr = $(target).children(".card-header").first();
+                    if ($(hdr).hasClass("selected"))
                     {
-                      var hdr = $(target).children(".card-header").first();
-                      if ($(hdr).hasClass("selected"))
-                      {
-                        $(hdr).removeClass("selected");
-                      }
-                      else
-                      {
-                        $(hdr).addClass("selected");
-                      }
+                      $(hdr).removeClass("selected");
+                    }
+                    else
+                    {
+                      $(hdr).addClass("selected");
                     }
                 });
                 var loc = $("#map").attr("data-location").split(",", 2).map(x => parseFloat(x));
@@ -259,10 +254,8 @@
                 $("#save-selections").click(function(e) {
                   var d = { };
                   $(".card").each(function(idx) {
-                    console.log(this);
                     d[$(this).attr("id")] = $(this).children(".card-header").first().hasClass("selected");
                   });
-                  console.log(d);
                   $("#save-selections").attr("href", URL.createObjectURL(new Blob([JSON.stringify(d)])));
                 });
               }
@@ -298,6 +291,15 @@
                   }
                 });
               }
+
+              $(".card a").on("click", function(e) {
+                e.preventDefault();
+              });
+
+              $("img, .img-container").on("click", function(e) {
+                $("#imagepreview").attr("src", $($(this).is("div") ? $(this).children("img").first() : this).attr("src"));
+			          $("#imagemodal").modal("show");  
+              });
             });
             reader.readAsText(file);
         }
@@ -320,6 +322,18 @@
       </div>
       <div class="row">
         <div id="menu" class="col"></div>
+      </div>
+    </div>
+    <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="image-modal" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          </div>
+          <div class="modal-body">
+            <img src="" class="mx-auto d-block img-fluid" id="imagepreview">
+          </div>
+        </div>
       </div>
     </div>
   </body>
